fix: reemplazado collapse de bootstrap por popover nativo

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,18 @@
+:root{
+    --menu-nav-width: 300px;
+    --open: 220px;
+}
+body{
+    transition: all 0.3s ease;
+}
 /* HEADER */
+header nav{
+    background-color: rgb(0, 155, 252);
+}
+header nav div div a{
+    color: #fff;
+    text-decoration: none;
+}
 #modal-login::backdrop{
     background-color: rgba(0,0,0,.3);
 }
@@ -26,4 +40,35 @@
     position: absolute;
     top: 5px;
     right: 5px;
+}
+#menu-nav{
+    position: fixed;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    padding: 3rem;
+    height: 100vh;
+    width: 50%;
+    color: #fff;
+    border: none;
+    border-left: 2px solid #aaa;
+    
+    transition: all 1s ease;
+}
+#menu-nav li a{
+    color: #fff;
+}
+#menu-nav{
+    background: rgb(0, 57, 93);
+}
+#menu-nav::-webkit-backdrop, #menu-nav::backdrop {
+    background: hsl(0 0% 15% / 0.5);
+}
+body:has([id=menu-nav]:popover-open){
+    translate: -50% 0;
+    filter: blur(2px);
+}
+#menu-nav:popover-open{
+    /* translate: 100% 0; */
+    background-color: red ;
 }
